# UnitTesting

./: README.md
CMake/: CMakeLists.txt  CMakeSettings.json
CMake/CTestTests/: CMakeLists.txt  MoreUnitTests.cpp  UnitTests.cpp
CMake/CTestTests/inc/: TestHelpers.h
CMake/GoogleTestTests/: CMakeLists.txt  GameObjectTests.cpp  GoogleTestDownload.txt  MoreUnitTests.cpp  PainterTests.cpp  UnitTests.cpp
CMake/Project/: CMakeLists.txt
CMake/Project/inc/: GameObject.h  GameObjectManager.h  ITurtle.h  Painter.h
CMake/Project/src/: main.cpp
CMake/Project/testing/: CMakeLists.txt  GameObject_Test.h  ITurtle_Test.h
Visual Studio Solution/: UnitTestExamples.sln
Visual Studio Solution/GoogleTestProject/: AssertExamples.cpp  ExpectedExamples.cpp  GoogleTestProject.vcxproj  GoogleTestProject.vcxproj.filters  InitializationExamples.cpp  PredicateAssertions.cpp  TestExamples.cpp
Visual Studio Solution/NativeUnitTestProject/: NativeUnitTestProject.vcxproj  NativeUnitTestProject.vcxproj.filters
Visual Studio Solution/NativeUnitTestProject/src/: AssertExamples.cpp  AttributeExamples.cpp  InitializationExamples.cpp
Visual Studio Solution/Project/: Project.vcxproj
